<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.app.freightCyber.presentation.auth.splash.SplashFirstActivityVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/splash_2_bg_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBlur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/black_blur_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLang"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:fitsSystemWindows="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLang"
            style="@style/TextView.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:lineSpacingExtra="1dp"
            android:text="@string/english"
            app:layout_constraintBottom_toBottomOf="@+id/imgLang"
            app:layout_constraintStart_toEndOf="@+id/imgLang"
            app:layout_constraintTop_toTopOf="@+id/imgLang" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:src="@drawable/splash_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLang" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:adjustViewBounds="false"
            android:src="@drawable/splash_text"
            app:layout_constraintEnd_toEndOf="@+id/img2"
            app:layout_constraintStart_toStartOf="@+id/img2"
            app:layout_constraintTop_toBottomOf="@+id/img2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlready"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:lineSpacingExtra="1dp"
            android:text="@string/already_have_an_account"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toStartOf="@+id/tvLogin"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/img"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="1dp"
            android:text="@string/login"
            android:onClick="@{(v)-> vm.onClick(v)}"
            android:textColor="@color/text_color_orange"
            android:layout_marginStart="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAlready"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAlready"
            app:layout_constraintTop_toTopOf="@+id/tvAlready" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            style="@style/TextView.Medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/btn_text_view_bg"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{(v)-> vm.onClick(v)}"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tvAlready" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFreight"
            style="@style/TextView.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="@dimen/_25sdp"
            android:textSize="@dimen/_13sdp"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="@string/tv_sign_up_text_freight_cyber"
            app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
            app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
            app:layout_constraintStart_toStartOf="@+id/tvSignUp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUnlocking"
            style="@style/TextView.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="@dimen/_21sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="Unlocking the future of Freight Management"
            app:layout_constraintBottom_toTopOf="@+id/tvFreight"
            app:layout_constraintEnd_toEndOf="@+id/tvFreight"
            app:layout_constraintStart_toStartOf="@+id/tvFreight" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>