<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.app.freightCyber.presentation.auth.signup.SignUpActivityVM" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:onClick="@{(v)->vm.onClick(v)}"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/img_back"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/splash_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            style="@style/TextView.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/sign_up"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPleaseEnter"
            style="@style/TextView.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_13sdp"
            android:text="@string/please_enter_your"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSignUp"
            app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEnterPhNo"
            style="@style/TextView.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="1dp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/enter_phone_number"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/tvPleaseEnter"
            app:layout_constraintTop_toBottomOf="@+id/tvPleaseEnter" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/EditTextStyle"
            android:id="@+id/etMobileContainer"
            android:layout_width="0dp"
            android:enabled="false"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintEnd_toEndOf="@+id/tvPleaseEnter"
            app:layout_constraintStart_toStartOf="@+id/tvEnterPhNo"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterPhNo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="phone"
            android:maxLength="10"
            android:background="@null"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/karla_regular"
            app:layout_constraintBottom_toBottomOf="@+id/etMobileContainer"
            app:layout_constraintEnd_toEndOf="@+id/etMobileContainer"
            app:layout_constraintStart_toEndOf="@+id/countryCode"
            app:layout_constraintTop_toTopOf="@+id/etMobileContainer" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccpDialog_showCloseIcon="false"
            app:ccp_autoDetectCountry="false"
            app:ccp_defaultNameCode="AU"
            android:layout_marginStart="@dimen/_5sdp"
            app:ccp_showArrow="false"
            app:ccp_showFlag="false"
            style="@style/TextView.Regular"
            app:ccp_showFullName="false"
            app:ccp_textSize="@dimen/_14sdp"
            app:ccp_showNameCode="false"
            app:ccp_contentColor="@color/white_3"
            app:ccp_showPhoneCode="true"
            app:layout_constraintBottom_toBottomOf="@+id/etMobileContainer"
            app:layout_constraintStart_toStartOf="@+id/etMobileContainer"
            app:layout_constraintTop_toTopOf="@+id/etMobileContainer">

        </com.hbb20.CountryCodePicker>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbTerms"
            style="@style/CustomCheckboxAuthSelector"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:checked="false"
            android:enabled="false"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/etMobileContainer"
            app:layout_constraintTop_toTopOf="@+id/tvByCont" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvByCont"
            style="@style/TextView.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:onClick="@{(v)->vm.onClick(v)}"
            android:paddingBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="Terms and Conditions"
            android:textColor="@color/text_color_orange"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@+id/etMobileContainer"
            app:layout_constraintStart_toEndOf="@+id/cbTerms"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvByCont2"
            style="@style/TextView.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="Please accept to continue"
            android:textColor="@color/white_3"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/etMobileContainer"
            app:layout_constraintStart_toStartOf="@+id/tvByCont"
            app:layout_constraintTop_toBottomOf="@+id/tvByCont" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVerifyAccount"
            style="@style/TextView.Medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/btn_text_view_bg"
            android:backgroundTint="@color/black_2"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{(v)->vm.onClick(v)}"
            android:text="Send Verification Code"
            android:textColor="@color/grey2"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/dash_color"
            app:layout_constraintBottom_toTopOf="@+id/tvVerifyAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>